[gd_scene load_steps=3 format=3 uid="uid://kad7ckg7px3l"]

[ext_resource type="Theme" uid="uid://b6k02yk4mj20q" path="res://themes/main_theme.tres" id="1_5kk8p"]
[ext_resource type="Script" path="res://scenes/ui/stats_menu.gd" id="1_dejwv"]

[node name="StatsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dejwv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.239216, 0.196078, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.5
offset_top = 20.0
offset_right = 39.5
offset_bottom = 65.0
grow_horizontal = 2
theme = ExtResource("1_5kk8p")
text = "Stats"
horizontal_alignment = 1

[node name="StatsContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -216.0
offset_right = 224.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5kk8p")

[node name="FruitMerges" type="Label" parent="StatsContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -167.5
offset_top = 11.0
offset_right = 167.5
offset_bottom = 56.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Fruits Merged: ERROR"
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 19.0
offset_right = 134.0
offset_bottom = 63.0
focus_mode = 0
theme = ExtResource("1_5kk8p")
text = "Exit"

[connection signal="button_down" from="ExitButton" to="." method="play_menu_click_click"]
[connection signal="pressed" from="ExitButton" to="." method="play_menu_click_release"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
